# vkworkspace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_RU.md  llm_full.md  pyproject.toml
.github/workflows/: codeql.yml  release.yml  ruff.yml  tests.yml
examples/: README.md  api_capabilities_test.py  custom_prefix_bot.py  diagnostic_bot.py  echo_bot.py  error_handling_bot.py  file_upload_bot.py  formatting_bot.py  fsm_bot.py  keyboard_bot.py  middleware_bot.py  multi_router_bot.py  proxy_bot.py  server_with_bot.py  typing_action_bot.py
examples/features/: custom_prefix.py  error_handling.py  files.py  formatting.py  fsm.py  keyboards.py  middleware.py  multi_router.py  proxy.py  typing_actions.py
examples/integrations/: chatops.py  fastapi_bot.py  redis_listener.py  report.py  server_with_bot.py  zabbix_alert.py
scripts/: api_capabilities_test.py  diagnostic_bot.py  gen_llm_ref.py
tests/: test_bot_api.py  test_bot_live.py  test_callback_data_factory.py  test_format_builder.py  test_fsm_timeout.py  test_input_file.py  test_paginator.py  test_scheduler.py  test_typing_action.py  test_voice.py
vkworkspace/: __init__.py  __meta__.py  exceptions.py  listener.py  server.py
vkworkspace/client/: bot.py  session.py
vkworkspace/dispatcher/: dispatcher.py  router.py
vkworkspace/dispatcher/event/: __init__.py  bases.py  handler.py  observer.py
vkworkspace/dispatcher/middlewares/: __init__.py  base.py  error.py  fsm_context.py  manager.py  user_context.py
vkworkspace/enums/: __init__.py  button_style.py  chat_action.py  chat_type.py  event_type.py  parse_mode.py  part_type.py  style_type.py
vkworkspace/filters/: __init__.py  base.py  callback_data.py  chat_type.py  command.py  message_parts.py  regexp.py  state.py
vkworkspace/fsm/: __init__.py  context.py  state.py  strategy.py
vkworkspace/fsm/storage/: __init__.py  base.py  memory.py  redis.py
vkworkspace/types/: __init__.py  base.py  callback_query.py  chat.py  chat_member_event.py  event.py  file.py  input_file.py  keyboard.py  message.py  response.py  thread.py  user.py
vkworkspace/utils/: __init__.py  actions.py  format_builder.py  keyboard.py  magic_filter.py  paginator.py  scheduler.py  sync.py  text.py  voice.py
