[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkworkspace"
version = "1.0.0"
description = "Fully async framework for building VK Teams (VK Workspace) bots, inspired by aiogram 3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Timerkhan Fattakhov", email = "timmek@users.noreply.github.com" },
]
keywords = [
    "vk", "teams", "workspace", "bot", "async", "framework",
    "vkteams", "vkworkspace", "superapp", "vk-teams", "vk-workspace",
    "aiogram", "httpx", "pydantic", "mailru-im-bot", "myteam",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.6,<3.0",
    "magic-filter>=1.0.12,<2.0",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0,<6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = ["vkworkspace[redis,dev]"]

[project.urls]
Homepage = "https://github.com/TimmekHW/vkworkspace"
Repository = "https://github.com/TimmekHW/vkworkspace"
Issues = "https://github.com/TimmekHW/vkworkspace/issues"
Documentation = "https://github.com/TimmekHW/vkworkspace#readme"

[tool.hatch.build.targets.wheel]
packages = ["vkworkspace"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
