[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkworkspace"
version = "1.8.1"
description = "Fully async framework for building VK Teams (VK Workspace) bots, inspired by aiogram 3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Timerkhan Fattakhov", email = "timmek@users.noreply.github.com" },
]
keywords = [
    "vk", "teams", "workspace", "bot", "async", "framework",
    "vkteams", "vkworkspace", "superapp", "vk-teams", "vk-workspace",
    "aiogram", "httpx", "pydantic", "mailru-im-bot", "myteam",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.6,<3.0",
    "magic-filter>=1.0.12,<2.0",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0,<6.0"]
voice = ["av>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
]
all = ["vkworkspace[redis,voice,dev]"]

[project.urls]
Homepage = "https://github.com/TimmekHW/vkworkspace"
Repository = "https://github.com/TimmekHW/vkworkspace"
Issues = "https://github.com/TimmekHW/vkworkspace/issues"
Documentation = "https://github.com/TimmekHW/vkworkspace#readme"

[tool.hatch.build.targets.wheel]
packages = ["vkworkspace"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "C901", "SIM", "PERF", "RUF"]
ignore = ["N818", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"examples/**/*" = ["E501", "C901", "PERF"]
"scripts/*" = ["E501", "C901", "PERF"]
"tests/*" = ["C901"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
